<resources>
    <string name="app_name">BBSF</string>


    <string name="h_hindi">हिन्दी </string>
    <string name="e_english">English</string>
    <string name="mobile_number">Enter Mobile Number*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="continue_to_login">Click to Login</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register_now">Register Now!</string>
    <string name="click_to_register">Click to Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_name">Enter Your Full Name*</string>
    <string name="tnc_label">By Resgitering, I Agree to <u>Terms &amp; Conditions</u></string>
    <string name="register_login_label">We care about your security as well as privacy.</string>
    <string name="skip">Skip &amp; Move ahead.</string>
    <string name="next">Next</string>


    <string-array name="intro_titles">
        <item>Quick Guard Boooking</item>
        <item>Buidling Security Management</item>
        <item>Advance Car Inform</item>
    </string-array>

    <string-array name="intro_description">
        <item>Book Security Guards, Bouncers on demand for your events on hourly basis within minutes.</item>
        <item>We provide complete security management system for your society which includes Security guards,Security camera installations, Daily Monitoring &amp; Intelligent Softwares as a complete suite at best prices and contracts</item>
        <item>This is a simple solution of informing your security guards for hassle free entry of your visitor's cars coming in your building with a simple mobile application.</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
