<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="3dp"
            android:paddingRight="10dp"
            android:text="@string/skip"
            android:textColor="#CCCCCC"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/shield" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:paddingTop="2dp"
            android:text="@string/register_login_label"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/register_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/person_vector" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:id="@+id/full_name"
                android:gravity="center_vertical"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:paddingLeft="6dp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="4dp"
            android:background="#F0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/phone_vector" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:id="@+id/register_mobile"
                android:gravity="center_vertical"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="6dp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="4dp"
            android:background="#F0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/password_vector" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/register_password"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:textColor="@color/colorAccent" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:id="@+id/confirm_password"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/click_to_register"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tnc_label"
            android:textColor="@color/colorAccent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/phone_vector" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:id="@+id/login_mobile"
                android:gravity="center_vertical"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="6dp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="4dp"
            android:background="#F0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/password_vector" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:id="@+id/login_password"
                android:gravity="center_vertical"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/forgot_password"
            android:paddingRight="12dp"
            android:text="@string/forgot_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/continue_to_login"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:text="@string/not_a_member_yet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="6dp"
                android:text="@string/register_now"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>